--- a/product.html
+++ b/product.html
@@ -15,13 +15,13 @@
     <!-- Header -->
     <header class="header">
       <div class="logo">
-        <a href="#">
+        <a href="home.html">
           <img src="./img/logo.png" alt="AE Boutique Logo" />
         </a>
       </div>
       <nav class="nav">
         <a href="#">TRANG CHỦ</a>
-        <a href="product.html">SẢN PHẨM</a>
+        <a href="#">SẢN PHẨM</a>
         <a href="#">DANH MỤC</a>
         <a href="#">PHỤ KIỆN</a>
         <a href="#">LIÊN HỆ</a>
@@ -47,43 +47,41 @@
       </div>
     </section>
 
-    <!-- Danh mục -->
-    <section class="categories">
-      <h2>Danh mục sản phẩm</h2>
-      <div class="category-list">
-        <div>
+    <!-- Sản phẩm -->
+    <section class="products">
+      <h2>Quần Short Kaki</h2>
+      <div class="product-list">
+        <div class="product">
           <img src="./img/2.png" alt="" />
-          <p>Áo phông</p>
+          <p>Quần short kaki</p>
+          <span class="price">389.000 ₫</span>
         </div>
-        <div>
-          <img src="./img/3.png" alt="" />
-          <p>Áo Polo</p>
-        </div>
-        <div>
-          <img src="./img/4.png" alt="" />
-          <p>Sơ mi</p>
-        </div>
-        <div>
-          <img src="./img/5.png" alt="" />
-          <p>Quần short</p>
-        </div>
-        <div>
+        <div class="product">
           <img src="./img/2.png" alt="" />
-          <p>Túi</p>
+          <p>Quần short kaki</p>
+          <span class="price">329.000 ₫</span>
+        </div>
+        <div class="product">
+          <img src="./img/2.png" alt="" />
+          <p>Quần Short Kaki</p>
+          <span class="price">449.000 ₫</span>
+        </div>
+        <div class="product">
+          <img src="./img/2.png" alt="" />
+          <p>Quần short kaki</p>
+          <span class="price">279.000 ₫</span>
         </div>
       </div>
     </section>
 
-    <!-- Sản phẩm -->
+    <!-- Sản phẩm 2 -->
     <section class="products">
-      <h2>Sản Phẩm</h2>
+      <h2>Quần Nỉ 2 Da</h2>
       <div class="product-list">
         <div class="product">
-          <a href="chitiet.html">
-            <img src="./img/2.png" alt="" />
-            <p>Quần short kaki</p>
-            <span class="price">389.000 ₫</span></a
-          >
+          <img src="./img/2.png" alt="" />
+          <p>Quần short kaki</p>
+          <span class="price">389.000 ₫</span>
         </div>
         <div class="product">
           <img src="./img/2.png" alt="" />
@@ -103,9 +101,9 @@
       </div>
     </section>
 
-    <!-- Sản phẩm bán chạy -->
+    <!-- Sản phẩm 3 -->
     <section class="products">
-      <h2>Sản Phẩm Bán Chạy</h2>
+      <h2>Quần Boy Phố</h2>
       <div class="product-list">
         <div class="product">
           <img src="./img/2.png" alt="" />
@@ -119,7 +117,7 @@
         </div>
         <div class="product">
           <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
+          <p>Quần Short Kaki</p>
           <span class="price">449.000 ₫</span>
         </div>
         <div class="product">
