--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <title>Đăng ký | AE Boutique</title>
+    <title>DICAN STORE</title>
     <link rel="stylesheet" href="./css/register.css" />
   </head>
   <body>
