--- a/chitiet.html
+++ b/chitiet.html
@@ -15,13 +15,13 @@
     <!-- Header -->
     <header class="header">
       <div class="logo">
-        <a href="#">
+        <a href="home.html">
           <img src="./img/logo.png" alt="AE Boutique Logo" />
         </a>
       </div>
       <nav class="nav">
         <a href="#">TRANG CHỦ</a>
-        <a href="product.html">SẢN PHẨM</a>
+        <a href="#">SẢN PHẨM</a>
         <a href="#">DANH MỤC</a>
         <a href="#">PHỤ KIỆN</a>
         <a href="#">LIÊN HỆ</a>
@@ -47,89 +47,93 @@
       </div>
     </section>
 
-    <!-- Danh mục -->
-    <section class="categories">
-      <h2>Danh mục sản phẩm</h2>
-      <div class="category-list">
-        <div>
-          <img src="./img/2.png" alt="" />
-          <p>Áo phông</p>
-        </div>
-        <div>
+    <div class="product-detail-container">
+      <div class="product-images">
+        <img
+          class="main-image"
+          src="./img/2.png"
+          alt="Quần Short Kaki Túi Hộp"
+        />
+
+        <div class="thumbnails">
           <img src="./img/3.png" alt="" />
-          <p>Áo Polo</p>
-        </div>
-        <div>
           <img src="./img/4.png" alt="" />
-          <p>Sơ mi</p>
-        </div>
-        <div>
           <img src="./img/5.png" alt="" />
-          <p>Quần short</p>
-        </div>
-        <div>
           <img src="./img/2.png" alt="" />
-          <p>Túi</p>
+          <img src="./img/4.png" alt="" />
+        </div>
+      </div>
+
+      <div class="product-info">
+        <h2>Quần Short Kaki Túi Hộp</h2>
+        <p class="price">199.000 đ</p>
+
+        <div class="select-group">
+          <label>Size:</label>
+          <div class="select-buttons size-buttons">
+            <button>M</button>
+            <button>L</button>
+            <button>XL</button>
+          </div>
+        </div>
+
+        <div class="select-group">
+          <label>Màu:</label>
+          <div class="select-buttons color-buttons">
+            <button>Đen</button>
+            <button>Trắng</button>
+          </div>
+        </div>
+
+        <div class="actions">
+          <button class="add-to-cart">Thêm vào giỏ hàng</button>
+          <button class="buy-now">Mua Ngay</button>
+        </div>
+
+        <ul class="description">
+          <li>
+            Quần short nam túi hộp CARGO vải kaki phong cách streetwear trẻ
+            trung năng động unisex
+          </li>
+          <li>Phong cách trẻ trung, năng động</li>
+          <li>Chất vải kaki co giãn nhẹ</li>
+          <li>Chất vải siêu xịn xò, dày dặn</li>
+          <li>Sản xuất tại Việt Nam</li>
+        </ul>
+      </div>
+    </div>
+
+    <section class="related-products">
+      <h2>Sản Phẩm Liên Quan</h2>
+      <br />
+      <div class="product-list2">
+        <div class="product-item">
+          <img src="./img/2.png" alt="" />
+          <p>Quần short kaki</p>
+          <strong>349.000 đ</strong>
+        </div>
+        <div class="product-item">
+          <img src="./img/3.png" alt="" />
+          <p>Quần short kaki</p>
+          <strong>329.000 đ</strong>
+        </div>
+        <div class="product-item">
+          <img src="./img/4.png" alt="" />
+          <p>Quần short kaki</p>
+          <strong>448.000 đ</strong>
+        </div>
+        <div class="product-item">
+          <img src="./img/5.png" alt="" />
+          <p>Quần short kaki</p>
+          <strong>379.000 đ</strong>
+        </div>
+        <div class="product-item">
+          <img src="./img/2.png" alt="" />
+          <p>Quần short kaki</p>
+          <strong>564.000 đ</strong>
         </div>
       </div>
     </section>
-
-    <!-- Sản phẩm -->
-    <section class="products">
-      <h2>Sản Phẩm</h2>
-      <div class="product-list">
-        <div class="product">
-          <a href="chitiet.html">
-            <img src="./img/2.png" alt="" />
-            <p>Quần short kaki</p>
-            <span class="price">389.000 ₫</span></a
-          >
-        </div>
-        <div class="product">
-          <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
-          <span class="price">329.000 ₫</span>
-        </div>
-        <div class="product">
-          <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
-          <span class="price">449.000 ₫</span>
-        </div>
-        <div class="product">
-          <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
-          <span class="price">279.000 ₫</span>
-        </div>
-      </div>
-    </section>
-
-    <!-- Sản phẩm bán chạy -->
-    <section class="products">
-      <h2>Sản Phẩm Bán Chạy</h2>
-      <div class="product-list">
-        <div class="product">
-          <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
-          <span class="price">389.000 ₫</span>
-        </div>
-        <div class="product">
-          <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
-          <span class="price">329.000 ₫</span>
-        </div>
-        <div class="product">
-          <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
-          <span class="price">449.000 ₫</span>
-        </div>
-        <div class="product">
-          <img src="./img/2.png" alt="" />
-          <p>Quần short kaki</p>
-          <span class="price">279.000 ₫</span>
-        </div>
-      </div>
-    </section>
-
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-content">
@@ -169,6 +173,30 @@
           if (!e.target.closest(".user-dropdown")) {
             dropdownMenu.style.display = "none";
           }
+        });
+      });
+      document.addEventListener("DOMContentLoaded", function () {
+        function handleSelect(groupSelector) {
+          const buttons = document.querySelectorAll(groupSelector + " button");
+          buttons.forEach((btn) => {
+            btn.addEventListener("click", () => {
+              buttons.forEach((b) => b.classList.remove("selected"));
+              btn.classList.add("selected");
+            });
+          });
+        }
+
+        handleSelect(".size-buttons");
+        handleSelect(".color-buttons");
+      });
+      document.addEventListener("DOMContentLoaded", function () {
+        const mainImage = document.querySelector(".main-image");
+        const thumbnails = document.querySelectorAll(".thumbnails img");
+
+        thumbnails.forEach(function (thumbnail) {
+          thumbnail.addEventListener("click", function () {
+            mainImage.src = this.src;
+          });
         });
       });
     </script>
