--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <title>Đăng nhập | AE Boutique</title>
+    <title>DICAN STORE</title>
     <link rel="stylesheet" href="./css/login.css" />
   </head>
   <body>
