--- a/chitiet.html
+++ b/chitiet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DICAN STORE</title>
-    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./public/css/home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="logo">
         <a href="home.html">
-          <img src="./img/logo.png" alt="AE Boutique Logo" />
+          <img src="/DuAnMau/public/img/logo.png" alt="AE Boutique Logo" />
         </a>
       </div>
       <nav class="nav">
@@ -43,7 +43,7 @@
     <!-- Banner -->
     <section class="banner">
       <div class="main-banner">
-        <img src="./img/banner.webp" alt="Banner chính" />
+        <img src="/DuAnMau/public/img/banner.webp" alt="Banner chính" />
       </div>
     </section>
 
@@ -51,16 +51,16 @@
       <div class="product-images">
         <img
           class="main-image"
-          src="./img/2.png"
+          src="/DuAnMau/public/img/2.png"
           alt="Quần Short Kaki Túi Hộp"
         />
 
         <div class="thumbnails">
-          <img src="./img/3.png" alt="" />
-          <img src="./img/4.png" alt="" />
-          <img src="./img/5.png" alt="" />
-          <img src="./img/2.png" alt="" />
-          <img src="./img/4.png" alt="" />
+          <img src="/DuAnMau/public/img/3.png" alt="" />
+          <img src="/DuAnMau/public/img/4.png" alt="" />
+          <img src="/DuAnMau/public/img/5.png" alt="" />
+          <img src="/DuAnMau/public/img/2.png" alt="" />
+          <img src="/DuAnMau/public/img/4.png" alt="" />
         </div>
       </div>
 
@@ -108,27 +108,27 @@
       <br />
       <div class="product-list2">
         <div class="product-item">
-          <img src="./img/2.png" alt="" />
+          <img src="/DuAnMau/public/img/2.png" alt="" />
           <p>Quần short kaki</p>
           <strong>349.000 đ</strong>
         </div>
         <div class="product-item">
-          <img src="./img/3.png" alt="" />
+          <img src="/DuAnMau/public/img/3.png" alt="" />
           <p>Quần short kaki</p>
           <strong>329.000 đ</strong>
         </div>
         <div class="product-item">
-          <img src="./img/4.png" alt="" />
+          <img src="/DuAnMau/public/img/4.png" alt="" />
           <p>Quần short kaki</p>
           <strong>448.000 đ</strong>
         </div>
         <div class="product-item">
-          <img src="./img/5.png" alt="" />
+          <img src="/DuAnMau/public/img/5.png" alt="" />
           <p>Quần short kaki</p>
           <strong>379.000 đ</strong>
         </div>
         <div class="product-item">
-          <img src="./img/2.png" alt="" />
+          <img src="/DuAnMau/public/img/2.png" alt="" />
           <p>Quần short kaki</p>
           <strong>564.000 đ</strong>
         </div>
